# repo-archaeologist

./: .gitignore  LICENSE  README.md  pyproject.toml
repo_archaeologist/: __init__.py  __main__.py  analyzer.py  cli.py  facts.py
repo_archaeologist/collectors/: __init__.py  dead_code.py  dependencies.py  imports.py  security.py  structure.py
repo_archaeologist/reports/: __init__.py  architecture.py  executive_summary.py  first_15_minutes.py  security.py
tests/: test_analyzer.py  test_dead_code.py  test_imports.py  test_new_reports.py  test_security.py
